--- a/Views/DangKyXetTuyenKhac/Ielts.cshtml
+++ b/Views/DangKyXetTuyenKhac/Ielts.cshtml
@@ -670,16 +670,13 @@
             Dkxt_DonViToChuc: Dkxt_DonViToChuc,
             Dkxt_KetQuaDatDuoc: Dkxt_KetQuaDatDuoc,
             Dkxt_TongDiem: Dkxt_TongDiem,
-            Dkxt_NgayDuThi: Dkxt_NgayDuThi,
-            Dkxt_XepLoaiHocLuc_12: Dkxt_XepLoaiHocLuc_12,
-            Dkxt_XepLoaiHanhKiem_12: Dkxt_XepLoaiHanhKiem_12,
+            Dkxt_NgayDuThi: Dkxt_NgayDuThi,          
             Dkxt_ToHopXT: Dkxt_ToHopXT,
             Dkxt_MinhChung_HB: fileData[0].savePath,
             Dkxt_MinhChung_CCCD: fileData[1].savePath,
             Dkxt_MinhChung_Bang: fileData[2].savePath,
             Dkxt_MinhChung_KetQua: fileData[3].savePath,
-            Dkxt_MinhChung_UuTien: fileData[4].savePath,
-        }
+            Dkxt_MinhChung_UuTien: fileData[4].savePath,        }
 
         $.ajax({
             url: "/DangKyXetTuyenKhac/Ielts",
