--- a/Views/Shared/_Layout_login.cshtml
+++ b/Views/Shared/_Layout_login.cshtml
@@ -10,10 +10,10 @@
     <link href="~/Content/styles.css" rel="stylesheet" />
     <!-- bootstrap 5.3-->
     <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+    <link rel="shortcut icon" href="~/favicon.png">
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/libs_font-awesome_6.1.1_js_all.min.js" data-search-pseudo-elements defer crossorigin="anonymous"></script>
-  
+
 
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
