--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -220,18 +220,18 @@
                             <hr />
                             <div>
                                 <label class="small mb-1" for="login_CCCD">Căn cước công dân</label>
-                                <input name="login_CCCD" id="login_CCCD" class="form-control" placeholder="Nhập CCCD" />
+                                <input name="login_CCCD" id="login_CCCD" class="form-control" placeholder="Nhập CCCD" value="1"/>
                                 <span id="login_CCCD_Error" class="small mb-1 text-danger"></span>
                             </div>
                             <div class="mb-3">
                                 <label class="small mb-1" for="inputPassword">Mật khẩu</label>
-                                <input type="password" name="login_password" id="login_password" class="form-control" placeholder="Nhập mật khẩu"/>
+                                <input type="password" name="login_password" id="login_password" class="form-control" placeholder="Nhập mật khẩu" value="123456"/>
                                 <span id="login_password_Error" class="small mb-1 text-danger"></span>
                             </div>
                             <center>
                                 <div class="d-inline-flex flex-nowrap align-items-center justify-content-center">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="0">
+                                        <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="0" checked>
                                         <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
                                     </div>
                                     <div class="form-check" style="margin-left:15px">
