--- a/Views/DangKyXetTuyenKhac/DanhGiaEdit.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGiaEdit.cshtml
@@ -36,8 +36,8 @@
         </div>
     </div>
 </header>
-@*<input type="hidden" id="hidden_Dkxt_ID" value="@ViewBag.Dkxt_ID" />*@
-<input type="hidden" value="1" id="hidden_Dkxt_ID" />
+<input type="hidden" id="hidden_Dkxt_ID" value="@ViewBag.Dkxt_ID" />
+
 <script>
     $(document).ready(function () {
         let sp_tieude = document.getElementById('sp_tieude');
