--- a/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxthocbaEdit.cshtml
@@ -166,6 +166,7 @@
                                         <tr>
                                             <td>
                                                 <div class="row mt-0 md-0">
+                                                    <label for="files_cancuoc_congdan" class="form-label"><span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
                                                     <div class="col-xxl-12">
                                                         <input id="files_hocba" type="file" multiple class="form-control" data-val="true" data-val-required="Vui lòng chọn file học bạ"
                                                                accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
@@ -203,7 +204,7 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="files_cancuoc_congdan" class="form-label">Căn cước công dân</label>
+                                                            <label for="files_cancuoc_congdan" class="form-label">Căn cước công dân <span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_cancuoc_congdan" multiple="multiple" name="files_cancuoc_congdan" type="file" data-val="true" data-val-required="Vui lòng chọn file CCCD"
                                                                        accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
@@ -218,7 +219,7 @@
                                                 <div class="row mt-0 md-0">
                                                     <div class="col-xxl-12">
                                                         <div class="form-group mb-2">
-                                                            <label for="files_bangtn" class="form-label">Bằng Tốt nghiệp (nếu có)</label>
+                                                            <label for="files_bangtn" class="form-label">Bằng Tốt nghiệp (nếu có)<span id="div_mc_btn"><a href="#" style="text-decoration:none">Tệp 1</a>&nbsp;<a href="#" style="text-decoration:none">Tệp 2</a></span></label>
                                                             <div class="col-md-12">
                                                                 <input class="form-control" id="files_bangtn" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN" accept=".pdf,.png, .PNG,.jpeg,.JPEG,.jpg,.JPG" />
                                                             </div>
