--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -311,7 +311,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-xxl-12">
-                                                        <table class="table mt-0 mb-0" id="FilesList_GTUT_View" style="visibility:hidden"> <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_g" /></th></tr></table>
+                                                        <table class="table mt-0 mb-0" id="FilesList_GTUT_View" style="visibility:hidden"> 
+                                                        <tr style="display:none"><th colspan="2"><input type="hidden" id="txt_uploader_file_g" /></th></tr></table>
                                                     </div>
                                                 </div>
                                             </td>
